ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: traefik-web-ui
  namespace: kube-system
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  tls:
    - secretName: traefik-cert
  rules:
  - host: test.zhangling.link
    http:
      paths:
      - backend:
          serviceName: traefik-ingress-service
          servicePort: 8080
